Version 1.5.1, 2013-01-21 14:00:00 +0100

  Sailfish OS:
  * NEW: add maintenance options (delete database, reset configuration)
  
  Daemon/Engine:
  * Changed: check for non existing database tables on every daemon start

Version 1.5.0, 2014-01-20 00:00:00 +0100

  Daemon/Engine
  * Fixed: speed up marking all items read
  
  Harmattan
  * Fixed: searching in feed item list is now working again
  
  General
  * NEW: it is now possible to set a default sort order for the feed item list,
    as well to decide how already read news items should be displayes (show, hide, 
    show after unread)
  

Version 1.4.1, 2014-01-16 23:52:00 +0100

  Sailfish OS:
  * NEW: added Martin Grimmes FancyScroller from Tidings
  * Changed: Quit in main menu now shuts down reader and engine
  * Fixed: file permissions in Sailfish OS RPM
  * Fixed: open in browser button in item view push up menu is now working
  * Fixed: minor UI fixes
  * Fixed: busy indicator was running on already read posts in special list view
  
  Harmattan:
  * Fixed: when daemon was crashed without notice and account was deleted in account
    manager it could happen, that it was not possible to create a new accout
  * Fixed: clicking on the launcher icon is not activating an already running ocNews
    instance
 
Version 1.4.0, 2014-01-14 19:01:00 +0100

  Sailfish OS:
  * Initial port
  
  Harmattan:
  * Changed: do not start daemon at system start but on D-Bus request
  * NEW: option for shutting both completely down, reader and daemon/engine

Version 1.3.1, 2013-12-17 16:31:01 +0100

  Harmattan
  * Fixed: added update hint to welcome screen

Version 1.3.0, 2013-12-17 11:43:09 +0100

  Daemon/Engine
  * NEW: background daemon for synchronization and as a handler for the operations
  * NEW: timed updates through background daemon
  
  Harmattan
  * NEW: event feed integration through background daemon
  * Changed: account is now handled by system account manager