@@ -13,14 +13,6 @@ Page {
 
     Component.onCompleted: feedsModelSql.refresh(folderId)
 
-//    Connections {
-//        target: feeds
-//        onMovedFeedSuccess: feedsModelSql.refresh(folderId)
-//        onCreatedFeedSuccess: { feedsModelSql.refresh(folderId); feedListViewPully.busy = false }
-//        onCreatedFeedError: { feedListViewPully.busy = false }
-//        onDeletedFeedSuccess: feedsModelSql.refresh(folderId)
-//        onMarkedReadFeedSuccess: feedsModelSql.refresh(folderId)
-//    }
     Connections {
         target: feeds
         onMovedFeedSuccess: feedsModelSql.refresh(folderId)
@@ -28,14 +20,6 @@ Page {
         onDeletedFeedSuccess: feedsModelSql.refresh(folderId)
         onMarkedReadFeedSuccess: feedsModelSql.refresh(folderId)
     }
-//    Connections {
-//        target: items
-//        onUpdatedItemsSuccess: { feedsModelSql.refresh(folderId); feedListViewPully.busy = false; updateFolder.enabled = true }
-//        onUpdatedItemsError: { feedListViewPully.busy = false; updateFolder.enabled = true }
-//        onRequestedItemsSuccess: { feedsModelSql.refresh(folderId); feedListViewPully.busy = false; updateFolder.enabled = true }
-//        onStarredItemsSuccess: feedsModelSql.refresh(folderId)
-//        onMarkedItemsSuccess: feedsModelSql.refresh(folderId)
-//    }
     Connections {
         target: items
         onUpdatedItemsSuccess: feedsModelSql.refresh(folderId)
@@ -43,34 +27,18 @@ Page {
         onStarredItemsSuccess: feedsModelSql.refresh(folderId)
         onMarkedItemsSuccess: feedsModelSql.refresh(folderId)
     }
-//    Connections {
-//        target: folders
-//        onDeletedFolderSuccess: pageStack.pop()
-//        onDeletedFolderError: feedListViewPully.busy = false
-//        onMarkedReadFolderSuccess: { feedsModelSql.refresh(folderId); feedListViewPully.busy = false }
-//        onMarkedReadFolderError: feedListViewPully.busy = false
-//        onRenamedFolderSuccess: { feedListViewPully.busy = false; feedListView.folderName = newfoldername }
-//        onRenamedFolderError: feedListViewPully.busy = false
-//    }
     Connections {
         target: folders
         onDeletedFolderSuccess: pageStack.pop()
         onMarkedReadFolderSuccess: feedsModelSql.refresh(folderId)
         onRenamedFolderSuccess: feedListView.folderName = newfoldername
     }
-//    Connections {
-//        target: updater
-//        onUpdateError: { feedListViewPully.busy = false; updateFolder.enabled = true }
-//        onUpdateFinished: { feedListViewPully.busy = false; updateFolder.enabled = true }
-//        onUpdateStarted: { feedListViewPully.busy = true; updateFolder.enabled = false }
-//    }
 
     SilicaListView {
         id: feedList
 
         PullDownMenu {
             id: feedListViewPully
-//            busy: updater.isUpdateRunning() ? true : false
             busy: operationRunning
             MenuItem {
                 id: deleteFolder
